# TradingView-Report-Data-Extraction

./: README.md  adjustments.json  pyproject.toml
data/: Unknown_Strategy.json
docs/: CONTEXT.MD
src/: main.py
